進捗管理バーの体裁を整えました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -84,6 +84,10 @@
 								<img src="./assets/img/spend/spend-slide1.jpg" alt="ご到着・チェックイン" width="408" height="271" decoding="async">
 							</div>
 						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent1">
+							<img src="./assets/img/spend/spend-slide2.jpg" alt="廊下" width="185" height="123" decoding="async">
+							<img src="./assets/img/spend/spend-slide3.jpg" alt="お茶でごゆっくり" width="123" height="127" decoding="async">
+						</div>
 						<span class="border-line"></span>
 					</li>
 					<li class="p-spend-slide__block p-spend-slide__block2">
@@ -95,6 +99,10 @@
 								<img src="./assets/img/spend/spend-slide4.jpg" alt="温泉1" width="411" height="272" decoding="async">
 							</div>
 						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent2">
+							<img src="./assets/img/spend/spend-slide5.jpg" alt="温泉2" width="186" height="123" decoding="async">
+							<img src="./assets/img/spend/spend-slide6.jpg" alt="温泉3" width="169" height="123" decoding="async">
+						</div>
 						<span class="border-line"></span>
 					</li>
 					<li class="p-spend-slide__block p-spend-slide__block3">
@@ -105,6 +113,10 @@
 							<div class="p-spend-slide__block__img">
 								<img src="./assets/img/spend/spend-slide7.jpg" alt="料理写真・メイン" width="520" height="272" decoding="async">
 							</div>
+						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent3">
+							<img src="./assets/img/spend/spend-slide8.jpg" alt="卵焼き" width="142" height="123" decoding="async">
+							<img src="./assets/img/spend/spend-slide9.jpg" alt="お茶漬け" width="153" height="102" decoding="async">
 						</div>
 						<span class="border-line"></span>
 					</li>
@@ -118,6 +130,9 @@
 								<img src="./assets/img/spend/spend-slide10.jpg" alt="海辺の景色" width="407" height="272" decoding="async">
 							</div>
 						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent4">
+							<img src="./assets/img/spend/spend-slide11.jpg" alt="客室" width="242" height="162" decoding="async">
+						</div>
 						<span class="border-line"></span>
 					</li>
 					<li class="p-spend-slide__block p-spend-slide__block5">
@@ -128,6 +143,9 @@
 							<div class="p-spend-slide__block__img">
 								<img src="./assets/img/spend/spend-slide12.jpg" alt="露天風呂" width="486" height="272" decoding="async">
 							</div>
+						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent5">
+							<img src="./assets/img/spend/spend-slide13.jpg" alt="お花" width="248" height="165" decoding="async">
 						</div>
 						<span class="border-line"></span>
 					</li>
@@ -140,6 +158,9 @@
 								<img src="./assets/img/spend/spend-slide14.jpg" alt="就寝灯" width="393" height="262" decoding="async">
 							</div>
 						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent6">
+							<img src="./assets/img/spend/spend-slide15.jpg" alt="露天風呂" width="262" height="175" decoding="async">
+						</div>
 						<span class="border-line"></span>
 					</li>
 					<li class="p-spend-slide__block p-spend-slide__block7">
@@ -151,6 +172,10 @@
 								<img src="./assets/img/spend/spend-slide16.jpg" alt="朝の露天風呂" width="361" height="271" decoding="async">
 							</div>
 						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent7">
+							<img src="./assets/img/spend/spend-slide17.jpg" alt="廊下" width="141" height="198" decoding="async">
+							<img src="./assets/img/spend/spend-slide18.jpg" alt="エントランス" width="170" height="182" decoding="async">
+						</div>
 						<span class="border-line"></span>
 					</li>
 					<li class="p-spend-slide__block p-spend-slide__block8">
@@ -161,6 +186,9 @@
 							<div class="p-spend-slide__block__img">
 								<img src="./assets/img/spend/spend-slide19.jpg" alt="ご朝食・和食" width="374" height="250" decoding="async">
 							</div>
+						</div>
+						<div class="p-spend-slide__accent p-spend-slide__accent8">
+							<img src="./assets/img/spend/spend-slide20.jpg" alt="食後のお茶" width="235" height="147" decoding="async">
 						</div>
 						<span class="border-line"></span>
 					</li>
