レスポンシブ修正しました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -32,7 +32,7 @@
 					</p>
 					<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
 				</a>
-				<ul class="p-gnav__nav js-link" id="gnav">
+				<ul class="p-gnav__nav js-link">
 					<li class="p-gnav__nav-list">
 						<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
 							温泉
