アニメーション修正しました。

--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -207,7 +207,7 @@
             </div>
             
 		</div>
-		<section class="p-spend-tour  wow animated fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
+		<section class="p-spend-tour">
             <div class="l-inner">
                 <h2 class="p-spend-tour__title">周辺観光</h2>
                 <div class="p-spend-tour__cards">
