--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="./assets/css/reset.css">
 	<!-- google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- wow用のanimate.css -->
     <link rel="stylesheet" href="./assets/css/animate.css">
 	<!-- style.css -->
@@ -20,7 +20,7 @@
 <body id="spend-page">
     <div class="spend-wrapper">
         <header class="l-lower-header fadeInAnime" id="header">
-            <h1 class="l-lower-header__title">過ごし方</h1>
+            <h1 class="l-lower-header__title p-spend__title">過ごし方</h1>
             <!-- ハンバーガーメニュー -->
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
@@ -66,7 +66,7 @@
         <div class="c-search-btn">
             <a href="#" class="c-search-btn__link">空 室 検 索</a>
         </div>
-        <div class="c-main-message">
+        <div class="c-main-message p-spend__message">
 			<p class="c-main-message__text wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
 				お部屋でゆっくり過ごすのもよし、<br>静岡ならではの体験をするのもよし、<br>当館と静岡の魅力を存分にお愉しみください。
 			</p>
@@ -81,7 +81,10 @@
                             <p class="p-spend-slide__text">KIZUNAYAへようこそ！<br>
                                 心地の良い波の音を聞きながら特別なひと時をお過ごしください。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide1.jpg" alt="ご到着・チェックイン" width="408" height="271" decoding="async">
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp1.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide1.jpg" alt="ご到着・チェックイン" width="408" height="271" decoding="async">
+                                </picture>
                             </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent1">
@@ -96,8 +99,10 @@
                             <p class="p-spend-slide__head">温泉を愉しむ</p>
                             <p class="p-spend-slide__text">静岡産のお茶でひと休みしたら、移動の疲れを癒しに温泉を楽しみましょう。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide4.jpg" alt="温泉1" width="411" height="272"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp2.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide4.jpg" alt="温泉を愉しむ" width="411" height="272" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent2">
                             <img src="./assets/img/spend/spend-slide5.jpg" alt="温泉2" width="186" height="123" decoding="async">
@@ -111,8 +116,10 @@
                             <p class="p-spend-slide__head">ご夕食</p>
                             <p class="p-spend-slide__text">KIZUNAYAこだわりの、旬の食材をふんだんに使ったコース料理をご堪能ください。一品料理のだし巻き卵もオススメです！</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide7.jpg" alt="料理写真・メイン" width="520" height="272"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp3.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide7.jpg" alt="ご夕食" width="520" height="272" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent3">
                             <img src="./assets/img/spend/spend-slide8.jpg" alt="卵焼き" width="142" height="123" decoding="async">
@@ -124,11 +131,12 @@
                         <div class="p-spend-slide__card p-spend-slide__card4">
                             <p class="p-spend-slide__time">19:30</p>
                             <p class="p-spend-slide__head">海辺を散歩</p>
-                            <p class="p-spend-slide__text">KIZUNAYAから徒歩5分で海岸沿いを散歩できます。
-                                心地よい海風を感じながら、天気が良ければ満天の星空を見上げることもできます。</p>
+                            <p class="p-spend-slide__text">KIZUNAYAから徒歩5分で海岸沿いを散歩できます。心地よい海風を感じながら、天気が良ければ満天の星空を見上げることもできます。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide10.jpg" alt="海辺の景色" width="407" height="272"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp4.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide10.jpg" alt="海辺を散歩" width="407" height="272" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent4">
                             <img src="./assets/img/spend/spend-slide11.jpg" alt="客室" width="242" height="162" decoding="async">
@@ -141,8 +149,10 @@
                             <p class="p-spend-slide__head">二度目の温泉</p>
                             <p class="p-spend-slide__text">就寝前に露天風呂で特別な休日を味わってはいかがでしょうか。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide12.jpg" alt="露天風呂" width="486" height="272" decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp5.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide12.jpg" alt="二度目の温泉" width="486" height="272" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent5">
                             <img src="./assets/img/spend/spend-slide13.jpg" alt="お花" width="248" height="165" decoding="async">
@@ -155,8 +165,10 @@
                             <p class="p-spend-slide__head">就寝</p>
                             <p class="p-spend-slide__text">就寝前に露天風呂で特別な休日を味わってはいかがでしょうか。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide14.jpg" alt="就寝灯" width="393" height="262"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp6.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide14.jpg" alt="就寝" width="393" height="262" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent6">
                             <img src="./assets/img/spend/spend-slide15.jpg" alt="露天風呂" width="262" height="175" decoding="async">
@@ -169,8 +181,10 @@
                             <p class="p-spend-slide__head">朝風呂</p>
                             <p class="p-spend-slide__text">朝風呂で気持ちよく1日をスタートさせましょう！</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide16.jpg" alt="朝の露天風呂" width="361" height="271"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp7.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide16.jpg" alt="朝風呂" width="361" height="271" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent7">
                             <img src="./assets/img/spend/spend-slide17.jpg" alt="廊下" width="141" height="198" decoding="async">
@@ -184,8 +198,10 @@
                             <p class="p-spend-slide__head">ご朝食</p>
                             <p class="p-spend-slide__text">地元の焼き魚で元気をチャージ！ほっこりするようなご朝食を用意しております。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide19.jpg" alt="ご朝食・和食" width="374" height="250"  decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp8.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide19.jpg" alt="ご朝食" width="374" height="250" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <div class="p-spend-slide__accent p-spend-slide__accent8">
                             <img src="./assets/img/spend/spend-slide20.jpg" alt="食後のお茶" width="235" height="147" decoding="async">
@@ -198,8 +214,10 @@
                             <p class="p-spend-slide__head">チェックアウト</p>
                             <p class="p-spend-slide__text">KIZUNAYAで過ごす1日はいかがでしたでしょうか。心も体も満たされる良い旅となりますように。またのお越しを心よりお待ちしております。</p>
                             <div class="p-spend-slide__block__img">
-                                <img src="./assets/img/spend/spend-slide21.jpg" alt="ご朝食・和食" width="453" height="247" decoding="async">
-                            </div>
+                                <picture>
+                                    <source media="(max-width:768px)" srcset="./assets/img/spend/spend-slide_sp9.jpg" type="image/png">
+                                    <img src="./assets/img/spend/spend-slide21.jpg" alt="チェックアウト" width="453" height="247" decoding="async">
+                                </picture>                            </div>
                         </div>
                         <span class="border-line"></span>
                     </li>
