過ごし方ページ、ピクセル調整。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -234,7 +234,7 @@
 
 		</div>
 		<section class="p-spend-tour">
-			<div class="l-inner">
+			<div class="l-inner p-spend__inner">
 				<h2 class="p-spend-tour__title">周辺観光</h2>
 				<div class="p-spend-tour__cards">
 					<div class="p-spend-tour__card">
@@ -246,9 +246,9 @@
 							茶摘み衣装を着てお茶摘みができます。お子様サイズから用意があるため、グループ全員で同じ格好で楽しむことができます。お茶摘み体験の後には、煎茶のオリジナルソフトクリームもおすすめです！
 						</div>
 						<div class="p-spend-tour__detail">
-							<p>【茶摘み体験可能期間】2023年 4/15(土)～7/2（日）</p>
-							<p>※要予約2023年 9/15(土)～10/29（日）</p>
-							<p>※要予約【茶摘衣装レンタル】あり（料金に含むため別途予約不要）</p>
+							<p>【茶摘み体験可能期間】<br class="is-sp">2023年 4/15(土)～7/2（日）</p>
+							<p class="small_text">※要予約2023年 9/15(土)～10/29（日）</p>
+							<p class="small_text">※要予約【茶摘衣装レンタル】あり（料金に含むため別途予約不要）</p>
 						</div>
 					</div>
 					<div class="p-spend-tour__card">
@@ -277,7 +277,7 @@
 							<p>【営業時間】</p>
 							<p>平日　10:00~20:00</p>
 							<p>土日祝日　10:00~21:00</p>
-							<p>※水曜定休日</p>
+							<p class="small_text">※水曜定休日</p>
 						</div>
 					</div>
 					<div class="p-spend-tour__card">
@@ -292,7 +292,7 @@
 							<p>【営業時間】</p>
 							<p>平日　10:00~20:00</p>
 							<p>土日祝日　10:00~21:00</p>
-							<p>※水曜定休日</p>
+							<p class="small_text">※水曜定休日</p>
 						</div>
 					</div>
 				</div>
