--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>アクセス</title>
         <!-- リセットCSS -->
-        <link rel="stylesheet" href="../public/assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/reset.css">
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="./assets/css/style.min.css">
     </head>
     <body id="access">
-        <header class="l-lower-header fadeInAnime" id="header">
-            <h1 class="l-lower-header__title">アクセス</h1>
+        <header class="l-lower-header p-access__header fadeInAnime" id="header">
+            <h1 class="l-lower-header__title p-access__title">アクセス</h1>
             <!-- ハンバーガーメニュー -->
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
@@ -67,7 +67,7 @@
             <div class="l-inner">
                 <div class="p-access__map">
                     <div class="p-access__map__block">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9939.093047307451!2d138.93857553568938!3d34.68029114643712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019e2f50ca17c2b%3A0x4912e3140f0805e0!2z6Z2Z5bKh55yM5LiL55Sw5biC!5e0!3m2!1sja!2sjp!4v1697513572517!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9939.093047307451!2d138.93857553568938!3d34.68029114643712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019e2f50ca17c2b%3A0x4912e3140f0805e0!2z6Z2Z5bKh55yM5LiL55Sw5biC!5e0!3m2!1sja!2sjp!4v1697513572517!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="p-access__map__address">
                         <p>〒415-0012 静岡県下田市</p>
