過ごし方ページ、アクセスページ、料理ページにFontAwesome用JSの追加

--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -242,6 +242,7 @@
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/c67cd22077.js" crossorigin="anonymous"></script>
 	<script src="./assets/js/script.min.js"></script>
 </body>
 
