--- a/開発用/public/access.html
+++ b/開発用/public/access.html
@@ -123,11 +123,12 @@
 		</div>
 		<div class="p-footer__sns--items">
 			<a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
-			<a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
+			<a href="#"><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
 	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/c67cd22077.js" crossorigin="anonymous"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src="./assets/js/wow.min.js"></script>
 	<script>
