--- a/開発用/public/onsen.html
+++ b/開発用/public/onsen.html
@@ -66,6 +66,7 @@
               <span class="c-drawer-btn__bar"></span>
           </div> -->
 		</nav>
+		<div class="p-gnav__background"></div>
 	</header>
 	<button class="c-search-btn">
 		<a href="#" class="c-search-btn__link">空 室 検 索</a>
