--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -119,6 +119,7 @@
               <span class="c-drawer-btn__bar"></span>
           </div> -->
 	</nav>
+	<div class="p-gnav__background"></div>
 	<button class="c-search-btn">
 		<a href="#" class="c-search-btn__link">空 室 検 索</a>
 	</button>
@@ -177,13 +178,13 @@
 	<div class="p-content">
 		<div class="p-content__wrap">
 			<div class="p-content__block wow animated fadeInUp" data-wow-delay="1s">
-				<a href="#" class="c-content__img">
+				<a href="./onsen.html" class="c-content__img">
 					<h3 class="c-content__title">温泉</h3>
 				</a>
 				<div class="p-content__text">
 					<h4 class="c-content__lead">温泉</h4>
 					<p class="c-content__desc">海を眺めながらゆったりとした時間<br>をお過ごしください</p>
-					<a href="" class="c-content__link">詳しく見る</a>
+					<a href="./onsen.html" class="c-content__link">詳しく見る</a>
 				</div>
 			</div>
 			<div class="p-content__block p-content__cooking wow animated fadeInUp" data-wow-delay="1s">
@@ -193,21 +194,21 @@
 						ご堪能ください<br>
 						季節ごとに変わる一品料理も<br>
 						オススメです</p>
-					<a href="" class="c-content__link c-content__link--cooking">詳しく見る</a>
+					<a href="./cooking.html" class="c-content__link c-content__link--cooking">詳しく見る</a>
 				</div>
-				<a href="#" class="c-content__img c-content__img--cooking">
+				<a href="./cooking.html" class="c-content__img c-content__img--cooking">
 					<h3 class="c-content__title c-content__title--vertical">料理</h3>
 				</a>
 			</div>
 			<div class="p-content__block  p-content__guestroom wow animated fadeInUp" data-wow-delay="1s">
-				<a href="#" class="c-content__img c-content__img--guestroom">
+				<a href="./guest-room.html" class="c-content__img c-content__img--guestroom">
 					<h3 class="c-content__title c-content__title--vertical c-content__title--guestroom">客室</h3>
 				</a>
 				<div class="p-content__text p-content__text--guestroom">
 					<h4 class="c-content__lead">客室</h4>
 					<p class="c-content__desc c-content__desc--guestroom">窓を開けると波の音が聞こえてきます<br>
 						自然に包まれながらお休みください</p>
-					<a href="" class="c-content__link c-content__link--guestroom">詳しく見る</a>
+					<a href="./guest-room.html" class="c-content__link c-content__link--guestroom">詳しく見る</a>
 				</div>
 			</div>
 		</div>
