--- a/開発用/src/index.html
+++ b/開発用/src/index.html
@@ -123,6 +123,7 @@
               <span class="c-drawer-btn__bar"></span>
           </div> -->
   </nav>
+  <div class="p-gnav__background"></div>
   <button class="c-search-btn">
     <a href="#" class="c-search-btn__link">空 室 検 索</a>
   </button>
