過ごし方ページの修正を行いました。

--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -237,11 +237,11 @@
                         <div class="p-spend-tour__text">
                             茶摘み衣装を着てお茶摘みができます。お子様サイズから用意があるため、グループ全員で同じ格好で楽しむことができます。お茶摘み体験の後には、煎茶のオリジナルソフトクリームもおすすめです！
                         </div>
-                        <div class="p-spend-tour__detail">
-                            <p>【茶摘み体験可能期間】<br class="is-sp">2023年 4/15(土)～7/2（日）</p>
-                            <p class="small_text">※要予約2023年 9/15(土)～10/29（日）</p>
-                            <p class="small_text">※要予約【茶摘衣装レンタル】あり（料金に含むため別途予約不要）</p>
-                        </div>
+                        <dl class="p-spend-tour__detail">
+                            <dt class="p-spend-tour__detail__head">【茶摘み体験可能期間】<br class="is-sp"><span>2023年 4/15(土)～7/2（日）</span></dt>
+                            <dd class="small_text">※要予約2023年 9/15(土)～10/29（日）</dd>
+                            <dd class="small_text">※要予約【茶摘衣装レンタル】あり（料金に含むため別途予約不要）</dd>
+                        </dl>
                     </div>
                     <div class="p-spend-tour__card">
                         <div class="p-spend-tour__img">
@@ -251,11 +251,11 @@
                         <div class="p-spend-tour__text">
                             抹茶の香りを存分に楽しんでいただけるよう厳選した抹茶を仕入れています。アイスやホット様々なメニューで抹茶をお楽しみいただけます。
                         </div>
-                        <div class="p-spend-tour__detail">
-                            <p>【営業時間】</p>
-                            <p>平日　10:00~22:00</p>
-                            <p>土日祝日　10:00~22:00</p>
-                        </div>
+                        <dl class="p-spend-tour__detail">
+                            <dt class="p-spend-tour__detail__head">【営業時間】</dt>
+                            <dd>平日　10:00~22:00</dd>
+                            <dd>土日祝日　10:00~22:00</dd>
+                        </dl>
                     </div>
                     <div class="p-spend-tour__card">
                         <div class="p-spend-tour__img">
@@ -265,12 +265,12 @@
                         <div class="p-spend-tour__text">
                             抹茶の香りが蕎麦と絶妙に組み合わさり、抹茶独自の風味を味わうことができます。
                         </div>
-                        <div class="p-spend-tour__detail">
-                            <p>【営業時間】</p>
-                            <p>平日　10:00~20:00</p>
-                            <p>土日祝日　10:00~21:00</p>
-                            <p class="small_text">※水曜定休日</p>
-                        </div>
+                        <dl class="p-spend-tour__detail">
+                            <dt class="p-spend-tour__detail__head">【営業時間】</dt>
+                            <dd>平日　10:00~20:00</dd>
+                            <dd>土日祝日　10:00~21:00</dd>
+                            <dd class="small_text">※水曜定休日</dd>
+                        </dl>
                     </div>
                     <div class="p-spend-tour__card">
                         <div class="p-spend-tour__img">
@@ -280,12 +280,12 @@
                         <div class="p-spend-tour__text">
                             静岡産の抹茶で作ったお菓子を多く取り揃えた和カフェ。本格的な抹茶も堪能いただけます。事前予約でお茶を立てる体験もできます。
                         </div>
-                        <div class="p-spend-tour__detail">
-                            <p>【営業時間】</p>
-                            <p>平日　10:00~20:00</p>
-                            <p>土日祝日　10:00~21:00</p>
-                            <p class="small_text">※水曜定休日</p>
-                        </div>
+                        <dl class="p-spend-tour__detail">
+                            <dt class="p-spend-tour__detail__head">【営業時間】</dt>
+                            <dd>平日　10:00~20:00</dd>
+                            <dd>土日祝日　10:00~21:00</dd>
+                            <dd class="small_text">※水曜定休日</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
