アニメーション修正しました。

--- a/開発用/src/cooking.html
+++ b/開発用/src/cooking.html
@@ -60,7 +60,7 @@
         <!-- /.l-header -->
         <main class="l-main">
             <div class="c-main-message">
-                <p class="c-main-message__text">
+                <p class="c-main-message__text wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
                     海の幸に恵まれた土地だからこそ<br class="is-sp">味わえる贅沢。<br>
                     四季折々の旬の素材を活かしたお料理で<br>
                     みなさまをお待ちしております。
