--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -291,7 +291,7 @@
             </div>
 		</section>
     </div>
-    <section class="p-reservation">
+    <section class="p-reservation wow animated fadeInUp" data-wow-delay="1s">
         <div class="l-inner">
             <h2 class="p-reservation__title">ご予約</h2>
             <p class="p-reservation__text">
