--- a/開発用/public/access.html
+++ b/開発用/public/access.html
@@ -85,7 +85,7 @@
 			</dl>
 		</div>
 	</main>
-	<section class="p-reservation">
+	<section class="p-reservation wow animated fadeInUp" data-wow-delay="1s">
 		<div class="l-inner">
 			<h2 class="p-reservation__title">ご予約</h2>
 			<p class="p-reservation__text">
