・ハンバーガーメニュー全ページ(TOPリンク挿入) ・フッター全ページ(温泉、客室、料理順番変更。インスタ、FB位置変更。アイコンにリンク追加)

--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -31,6 +31,11 @@
 			</a>
 			<ul class="p-gnav__nav js-link" id="gnav">
 				<li class="p-gnav__nav-list">
+					<a href="./index.html" class="p-gnav__nav-link g-nav-anm">
+						TOP
+					</a>
+				</li>
+				<li class="p-gnav__nav-list">
 					<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
 						温泉
 					</a>
@@ -59,6 +64,9 @@
 		</nav>
 		<div class="p-gnav__background"></div>
 	</header>
+	<button class="c-search-btn">
+		<a href="#" class="c-search-btn__link">空 室 検 索</a>
+	</button>
 	<!-- /.l-header -->
 	<main class="l-main">
 		<div class="c-main-message">
@@ -199,9 +207,9 @@
 	<footer class="l-footer">
 		<div class="p-footer__wrap">
 			<div class="p-footer__info">
-				<div class="c-footer__logo">
+				<a class="c-footer__logo" href="./index.html">
 					<img src="assets/img/top/logo.png" alt="KIZUNAYAロゴ">
-				</div>
+				</a>
 				<h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
 				<p class="c-address__number">
 					〒123-4567
@@ -214,11 +222,11 @@
 					<a class="c-footer__nav--item" href="./onsen.html">
 						<span>ー</span>　温泉
 					</a>
-					<a class="c-footer__nav--item" href="./cooking.html">
-						<span>ー</span>　料理
-					</a>
 					<a class="c-footer__nav--item" href="./guest-room.html">
 						<span>ー</span>　客室
+					</a>
+					<a class="c-footer__nav--item" href="./cooking.html">
+						<span>ー</span>　料理
 					</a>
 				</div>
 				<div class="p-footer__link--nav">
