--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -13,6 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Hind:wght@700&family=Kiwi+Maru&family=Noto+Sans+JP&family=Satisfy&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Hind:wght@700&family=Kiwi+Maru&family=Noto+Sans+JP&family=Satisfy&family=Shippori+Mincho:wght@400;700;800&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.3.1/swiper-bundle.css">
+	<link rel="icon" type="image/png" href="./assets/img/top/logo.png">
 	<link rel="stylesheet" href="./assets/css/animate.css">
 	<script src="./assets/js/wow.min.js"></script>
 	<script>
@@ -40,6 +41,11 @@
 				<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
 			</a>
 			<ul class="p-gnav__nav js-link">
+				<li class="p-gnav__nav-list">
+					<a href="./index.html" class="p-gnav__nav-link g-nav-anm">
+						TOP
+					</a>
+				</li>
 				<li class="p-gnav__nav-list">
 					<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
 						温泉
@@ -184,9 +190,9 @@
 	<footer class="l-footer">
 		<div class="p-footer__wrap">
 			<div class="p-footer__info">
-				<div class="c-footer__logo">
+				<a class="c-footer__logo" href="./index.html">
 					<img src="assets/img/top/logo.png" alt="KIZUNAYAロゴ">
-				</div>
+				</a>
 				<h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
 				<p class="c-address__number">
 					〒123-4567</p>
@@ -196,8 +202,8 @@
 			<div class="p-footer__nav--wrap">
 				<div class="p-footer__link--nav">
 					<a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
-					<a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
 					<a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
+					<a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
 				</div>
 				<div class="p-footer__link--nav">
 					<a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
