--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -36,6 +36,11 @@
             </a>
             <ul class="p-gnav__nav js-link" id="gnav">
                 <li class="p-gnav__nav-list">
+                    <a href="./index.html" class="p-gnav__nav-link g-nav-anm">
+                        TOP
+                    </a>
+                </li>
+                <li class="p-gnav__nav-list">
                     <a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
                         温泉
                     </a>
@@ -207,9 +212,9 @@
     <footer class="l-footer">
         <div class="p-footer__wrap">
             <div class="p-footer__info">
-                <div class="c-footer__logo">
+                <a class="c-footer__logo" href="./index.html">
                     <img src="assets/img/top/logo.png" alt="KIZUNAYAロゴ">
-                </div>
+                </a>
                 <h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
                 <p class="c-address__number">
                     〒123-4567</p>
@@ -219,8 +224,8 @@
             <div class="p-footer__nav--wrap">
                 <div class="p-footer__link--nav">
                     <a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
-                    <a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
                     <a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
+                    <a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
                 </div>
                 <div class="p-footer__link--nav">
                     <a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
