--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -249,13 +249,16 @@
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/c67cd22077.js" crossorigin="anonymous"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
 	<script src="./assets/js/wow.min.js"></script>
 	<script>
 		new WOW().init();
 	</script>
-	<script src="./assets/js/script.min.js"></script>
+	<script defer src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
