料理写真のズレを修正しました。

--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -82,20 +82,20 @@
 					<div class="p-course__img p-course__img--01">
 						<picture>
 							<source srcset="./assets/img/cooking/sea1_sp.jpg" media="(max-width: 767px)" type="image/jpg">
-							<img src="./assets/img/cooking/sea1.jpg" alt="フグのお刺身">
+							<img src="./assets/img/cooking/sea1.jpg" alt="フグのお刺身" width="458" heignt="235">
 						</picture>
 					</div>
 					<div class="p-course__img p-course__img--02">
-						<img src="./assets/img/cooking/sea2.jpg" alt="蒸しガニ">
+						<img src="./assets/img/cooking/sea2.jpg" alt="蒸しガニ" width="316" heignt="235">
 					</div>
 					<div class="p-course__img p-course__img--03">
-						<img src="./assets/img/cooking/sea3.jpg" alt="カニのしゃぶしゃぶ">
+						<img src="./assets/img/cooking/sea3.jpg" alt="カニのしゃぶしゃぶ" width="602" heignt="480">
 					</div>
 					<div class="p-course__img p-course__img--04">
-						<img src="./assets/img/cooking/sea4.jpg" alt="刺身盛合せ">
+						<img src="./assets/img/cooking/sea4.jpg" alt="刺身盛合せ" width="458" heignt="243">
 					</div>
 					<div class="p-course__img p-course__img--05">
-						<img src="./assets/img/cooking/sea5.jpg" alt="蟹味噌甲羅焼き">
+						<img src="./assets/img/cooking/sea5.jpg" alt="蟹味噌甲羅焼き" width="316" heignt="243">
 					</div>
 				</div>
 				<div class="l-inner">
