SP時のgridレイアウトを調整しました。Firefox不具合も解消済みです。

--- a/開発用/src/cooking.html
+++ b/開発用/src/cooking.html
@@ -115,19 +115,19 @@
                 <div class="p-course__version" id="luxury">
                     <div class="p-course__gallery wow animated fadeInUp" data-wow-delay="1s">
                         <div class="p-course__img p-course__img--01">
-                            <img src="./assets/img/cooking/luxury1.jpg" alt="フグのお刺身">
+                            <img src="./assets/img/cooking/luxury1.jpg" alt="和牛ステーキ">
                         </div>
                         <div class="p-course__img p-course__img--02">
-                            <img src="./assets/img/cooking/luxury2.jpg" alt="フグのお刺身">
+                            <img src="./assets/img/cooking/luxury2.jpg" alt="生桜エビ">
                         </div>
                         <div class="p-course__img p-course__img--03">
-                            <img src="./assets/img/cooking/luxury3.jpg" alt="フグのお刺身">
+                            <img src="./assets/img/cooking/luxury3.jpg" alt="すき焼き">
                         </div>
                         <div class="p-course__img p-course__img--04">
-                            <img src="./assets/img/cooking/luxury4.jpg" alt="フグのお刺身">
+                            <img src="./assets/img/cooking/luxury4.jpg" alt="刺身盛り合わせ">
                         </div>
                         <div class="p-course__img p-course__img--05">
-                            <img src="./assets/img/cooking/luxury5.jpg" alt="フグのお刺身">
+                            <img src="./assets/img/cooking/luxury5.jpg" alt="ホタテのバター焼き">
                         </div>
                     </div>
                     <!-- /.p-course__gallery -->
