一部修正しました。

--- a/開発用/src/cooking.html
+++ b/開発用/src/cooking.html
@@ -66,7 +66,7 @@
             <a href="#" class="c-search-btn__link">空 室 検 索</a>
         </button>
         <!-- /.l-header -->
-        <main class="l-main">
+        <main class="l-main p-cooking__main">
             <div class="c-main-message">
                 <p class="c-main-message__text wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
                     海の幸に恵まれた土地だからこそ<br class="is-sp">味わえる贅沢。<br>
@@ -96,7 +96,7 @@
                             <img src="./assets/img/cooking/sea5.jpg" alt="蟹味噌甲羅焼き" width="316" heignt="243">
                         </div>
                     </div>
-                    <div class="l-inner">
+                    <div class="p-course__inner">
                         <div class="p-course__menu wow animated fadeInUp" data-wow-delay="1s">
                             <h2 class="p-course__title">海の幸コース</h2>
                             <ul class="p-course__list">
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <!-- /.p-course__gallery -->
-                    <div class="l-inner">
+                    <div class="p-course__inner">
                         <div class="p-course__menu wow animated fadeInUp" data-wow-delay="1s">
                             <h2 class="p-course__title">贅沢コース</h2>
                             <ul class="p-course__list">
@@ -145,9 +145,8 @@
                                 <li class="p-course__item">バニラアイス</li>
                             </ul>
                         </div>
-                        <!-- /.p-course__menu -->
                     </div>
-                    <!-- /.l-inner -->
+                        <!-- /.p-course__menu -->
                 </div>
                 <!-- /.p-course__version -->
             </section>
@@ -159,19 +158,19 @@
                             <div class="p-dish__img">
                                 <img src="./assets/img/cooking/dish1.jpg" alt="KIZUNAYA特製だし巻き卵">
                             </div>
-                            <p class="p-dish__text">KIZUNAYA特製だし巻き卵</p>
+                            <p class="p-dish__text">KIZUNAYA特製<br class="is-sp">だし巻き卵</p>
                         </li>
                         <li class="p-dish__item">
                             <div class="p-dish__img">
                                 <img src="./assets/img/cooking/dish2.jpg" alt="KIZUNAYA特製天ぷら">
                             </div>
-                            <p class="p-dish__text">KIZUNAYA特製天ぷら</p>
+                            <p class="p-dish__text">KIZUNAYA特製<br class="is-sp">天ぷら</p>
                         </li>
                         <li class="p-dish__item">
                             <div class="p-dish__img">
                                 <img src="./assets/img/cooking/dish3.jpg" alt="KIZUNAYA特製お漬物">
                             </div>
-                            <p class="p-dish__text">KIZUNAYA特製お漬物</p>
+                            <p class="p-dish__text">KIZUNAYA特製<br class="is-sp">お漬物</p>
                         </li>
                     </ul>
                 </div>
