予約ボタンの余白、copylightの©修正

--- a/開発用/src/onsen.html
+++ b/開発用/src/onsen.html
@@ -26,60 +26,60 @@
 <body>
   <header class="l-header wow animated fadeIn" data-wow-delay="1s" data-wow-duration="2s">
     <h1 class="c-header__heading">温 泉</h1>
-     <!-- ハンバーガーメニュー -->
-     <div class="c-drawer-btn l-lower-headerr__btn">
+    <!-- ハンバーガーメニュー -->
+    <div class="c-drawer-btn l-lower-headerr__btn">
       <span class="c-drawer-btn__bar"></span>
-  </div>
-  <nav class="p-gnav" id="gnav">
+    </div>
+    <nav class="p-gnav" id="gnav">
       <a class="p-gnav__logo" href="index.html">
-          <p class="p-gnav__logo-img">
-              <img src="./assets/img/common/logo-white.png" alt="きずなや">
-          </p>
-          <p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
+        <p class="p-gnav__logo-img">
+          <img src="./assets/img/common/logo-white.png" alt="きずなや">
+        </p>
+        <p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
       </a>
       <ul class="p-gnav__nav js-link" id="gnav">
         <li class="p-gnav__nav-list">
           <a href="./index.html" class="p-gnav__nav-link g-nav-anm">
-              TOP
+            TOP
           </a>
-      </li>
-          <li class="p-gnav__nav-list">
-              <a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
-                  温泉
-              </a>
-          </li>
-          <li class="p-gnav__nav-list">
-              <a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
-                  客室
-              </a>
-          </li>
-          <li class="p-gnav__nav-list">
-              <a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
-                  料理
-              </a>
-          </li>
-          <li class="p-gnav__nav-list">
-              <a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
-                  過ごし方
-              </a>
-          </li>
-          <li class="p-gnav__nav-list">
-              <a href="./access.html" class="p-gnav__nav-link g-nav-anm">
-                  アクセス
-              </a>
-          </li>
+        </li>
+        <li class="p-gnav__nav-list">
+          <a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
+            温泉
+          </a>
+        </li>
+        <li class="p-gnav__nav-list">
+          <a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
+            客室
+          </a>
+        </li>
+        <li class="p-gnav__nav-list">
+          <a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
+            料理
+          </a>
+        </li>
+        <li class="p-gnav__nav-list">
+          <a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
+            過ごし方
+          </a>
+        </li>
+        <li class="p-gnav__nav-list">
+          <a href="./access.html" class="p-gnav__nav-link g-nav-anm">
+            アクセス
+          </a>
+        </li>
       </ul>
       <!-- <div class="c-drawer-btn p-gnav__btn">
               <span class="c-drawer-btn__bar"></span>
               <span class="c-drawer-btn__bar"></span>
               <span class="c-drawer-btn__bar"></span>
           </div> -->
-  </nav>
-  <div class="p-gnav__background"></div>
+    </nav>
+    <div class="p-gnav__background"></div>
   </header>
   <button class="c-search-btn">
     <a href="#" class="c-search-btn__link">空 室 検 索</a>
-</button>
+  </button>
   <div class="p-concept">
     <div class="p-concept__wrap p-concept__onsen--wrap">
       <p class="c-concept__lead wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
@@ -207,7 +207,7 @@
       <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
       <a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
     </div>
-    <p class="c-copyright">©︎2023 KIZUNAYA</p>
+    <p class="c-copyright">©2023 KIZUNAYA</p>
   </footer>
   <button class="c-scroll__btn wow animated fadeIn"></button>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
