--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -344,7 +344,7 @@
 			<a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
 			<a href="#"><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
 		</div>
-		<p class="c-copyright">©︎2023 KIZUNAYA</p>
+		<p class="c-copyright">©2023 KIZUNAYA</p>
 	</footer>
 	<button class="c-scroll__btn wow animated fadeIn"></button>
 	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
