--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -128,7 +128,7 @@
               <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
               <a href="#"><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
             </div>
-            <p class="c-copyright">©︎2023 KIZUNAYA</p>
+            <p class="c-copyright">©2023 KIZUNAYA</p>
         </footer>
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/c67cd22077.js" crossorigin="anonymous"></script>
