--- a/開発用/src/index.html
+++ b/開発用/src/index.html
@@ -219,7 +219,7 @@
       <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
       <a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
     </div>
-    <p class="c-copyright">©︎2023 KIZUNAYA</p>
+    <p class="c-copyright">©2023 KIZUNAYA</p>
   </footer>
   <button class="c-scroll__btn wow animated fadeIn"></button>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
